    * "reset formation" and "reset formation slot" command to undo
      scripted modifications to battle formations. [James]
    * "set slice size" and "slice is map layer" [Ralph]
    * "NPCstat:tag1", "NPCstat:tag2" and "NPCstat:onetime use flag"
      constants for "read NPC"/"alter NPC" [Ralph]
    * "string sprintf" takes %b and %o codes for binary and octal [Ralph]

  * Changes

  * Bugfixes
    * Copy-paste in slice editor didn't copy slice extra data or autosort
      (also, couldn't edit the autosort sort order) [Ralph]
    * Windows only: Fixed a whole bunch of console windows popping up when
      entering Distribute Game menu, and elsewhere [Ralph]
    * "fill parent" and "set slice width/height" didn't work on Panel
      or Special slices [Ralph]
    * ${} codes in map names display correctly in the save/load screen
      [James]
    * A nonsensical item ownership number was showing up when hiring
      heroes at a shop [James]
    * Heroes killed by HP-cost in battle now correctly show their
      death frame instead of vanishing [James]
    * "add enemy to formation" was not putting enemies at the correct
      Y coordinate [James]
    * Fixed "check wall collision x/y" and "move slice with wallchecking"
      often failing to detect collision with corners of walls. Also,
      "move slice with wallchecking" now returns special values when it hit
      a corner rather than returing that it hit walls on two sides [Ralph]

  * Stuff Only Developers Will Notice
    * --nowait option when importing scripts from the commandline [Ralph]


September 22 2017 [Dwimmercrafty+1]

  * Bugfixes
     * Fixed a critical bug that erased On-Death-Bequest attacks and
       Non-Elemental-Counterattacks from all enemies when a game was
       loaded into custom. If you lost enemy data, and you still have
       a backup copy of your game from before August 29 2017, please
       ask the developers for help on the Forums. If you do not have